--- a/askie/sass/partials/_workClient.scss
+++ b/askie/sass/partials/_workClient.scss
@@ -1,35 +1,40 @@
+@import '../modules/minxinMediaQueries';
+@import '../modules/mixinPinkTitle';
+@import '../modules/mixinFontSize';
+
+
 .workClient {
   position: relative;
-  font-size: 1rem;
+  @include font-size(16);
+  margin-bottom: 120px;
 
-  h2 {
+  .workClient__titleContainer {
     position: absolute;
-    background: $primaryColor;
-    color: $secondaryColor;
-    top: -64px;
-    padding: 20px 0;
-    font-size: 1.2em;
-    left: 20%;
-    right: 20%;
+    top: -60px;
+    left: 0;
+    right: 0;
     text-align: center;
-    font-weight: 500;
-    letter-spacing: .1rem;
-    @extend %subTitleFontFamily;
 
     @include media-xs {
-      top: -69px;
+      top: -63px;
+    }
+
+    @include media-sm {
+      top: -64px;
     }
 
     @include media-md {
-      top: -71px;
-      left: 35.5%;
-      right: auto;
-      padding: 20px 80px;
+      top: -65px;
     }
   
     @include media-lg {
-      top: -76px;
+      top: -71px;
     }
+
+  }
+
+  h2 {
+    @include pinkTitle(inline-block);
 
     &::after {
       content: '';
@@ -37,25 +42,49 @@
       width: 20px;
       height: 20px;
       bottom: -10px;
-      left: 48%;
+      left: calc(50% - 10px);
       background: $primaryColor;
       transform: rotate(45deg);
+      z-index: 1;
     }
 }
   .workClients__gridContainer {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(280px, 1fr) ) ;
+    grid-template-columns: repeat(auto-fill, minmax(320px, 1fr) ) ;
     font-size: 0;
   }
-  .workClients__gridItem {}
+  .workClients__gridItem {
+    position: relative;
+  }
+
+  .workClients__gridItem:hover {
+    .workClients__description {
+      visibility: visible;
+      opacity: 1;
+    }
+  }
 
   .workClients__snapshot {
     width: 100%;
   }
+
   .workClients__description {
-    display: none;
-    font-size: 1em;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2rem;
+    position: absolute;
+    text-align: center;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    color: #fff;
+    background: rgba(255, 0, 67, .5);
     @extend %mainTitleFontFamily;
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility 0s, opacity 0.3s linear;
   }
 
   @include media-xs {
